--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,11 +1,8 @@
 * {
   box-sizing: border-box;
 }
-h1 {
-  margin-bottom: 15px;
-}
 
-p {
+section {
   border: 1px solid black;
   background-color: #A52A2A;
   width: 90%;
