--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,20 +1,52 @@
 * {
   box-sizing: border-box;
+  font-family: Helvetica;
+  color: black;
+}
+
+body {
+    margin: 10px;
+}
+
+header {
+    margin: 25px 25px 15px 25px;
+    text-align: center;
+    font-weight: bold;
+    font-size: larger;
 }
 
 section {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
+  padding: 10px 20px 10px 20px;
+  position: relative;
+  width: 100%;
+  height: 170px;
   margin-right: auto;
   margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+}
+
+div.title {
+    padding: 2px 25px 2px 25px;
+    margin-top: -1px;
+    margin-right: -1px;
+    border: 1px solid black;
+    background-color: #f98c48;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+
+div.box {
+    border: 1px solid black;
+    position: absolute;
+    padding: 35px 10px 10px 10px;
+    background-color: #e3fcf9;
+    height: 150px;
+    position: absolute;
 }
 
 /* Simple Responsive Framework. */
 .row {
+  margin-left: -10px;
   width: 100%;
 }
 
@@ -22,7 +54,6 @@ section {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -66,7 +97,6 @@ section {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -110,7 +140,6 @@ section {
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-sm-1 {
     width: 8.33%;
