--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,1 +1,26 @@
+#collapsable-nav {
+    background-color: #FCCAA5;
+}
+#main-section {
+    background-color: #A0E9F3;
+    height: 1000px;
+    margin: 0px 25px 0px;
+}
+#title {
+    margin: 5px 0px 25px 0px;
+}
 
+hr {
+    margin: 0px;
+    width: 100%;
+}
+
+.navbar-collapse {
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.menu-item {
+    line-height: 2.5em;
+    font-size: 1.2em;
+}
