--- a/coursera-angularJS/module4-solution/src/menuapp/templates/categories.html
+++ b/coursera-angularJS/module4-solution/src/menuapp/templates/categories.html
@@ -1,5 +1,5 @@
-Categories html file..
-
-1) {{$ctrl.categories}}
-2) {{$ctrl.categories}}
-3) {{$ctrl.categories}}
+<br>
+<h3>Categories:</h3>
+<ul>
+  <li ng-repeat="category in $ctrl.categories">{{category.name}}</li>
+</ul>
