--- a/coursera-angularJS/module4-solution/src/menuapp/templates/home.html
+++ b/coursera-angularJS/module4-solution/src/menuapp/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Welcome to our Restaurant</h1>
 
-<button ui-sref="home.test">Test View</button>
+<button ui-sref="home">Home</button>
 <button ui-sref="home.categories">Categories View</button>
 
 <br>
