--- a/coursera-angularJS/module4-solution/src/menuapp/templates/items.html
+++ b/coursera-angularJS/module4-solution/src/menuapp/templates/items.html
@@ -1,5 +1,6 @@
 <br>
-<h3>{{$ctrl.category}} items:</h3>
+(Items View)
+<h3>{{$ctrl.category}}:</h3>
 <ul>
   <li ng-repeat="item in $ctrl.items">{{item.name}}</li>
 </ul>
